# paraai

./: .gitignore  LICENSE  README.md  pyproject.toml
models/: neural_policy.pth
paraai/: experiment.py  flight_conditions.py  flight_policy.py  flight_policy_neural.py  setup.py  simulator.py  simulator_3.py  simulator_crude.py  tool_spacetime.py  tool_string.py  tools_datasets.py  tools_map.py  tools_models.py  tools_plot.py  tools_sim.py  tools_terrain.py  tools_tracklog.py  tools_tracklogbody.py
paraai/map/: dataset_builder.py  map_builder_average.py  map_builder_base.py  map_builder_convolution.py  map_builder_convolution_weighted.py  map_builder_density.py  map_builder_estimate_base.py  map_builder_estimate_net.py  map_builder_estimate_net_time.py  map_builder_estimate_simple.py  map_builder_estimate_time.py  map_builder_flatland.py  map_builder_flatland_torch.py  map_estimate_net.py  show_climb_map.py  vectror_map_array.py
paraai/model/: __init__.py  atmosphere_model.py  boundingbox.py  climb.py  exception.py  model.py  simple_climb.py  simple_climb_pixel.py  thermal.py  tracklog.py  train_log.py  trigger_point.py
paraai/repository/: repository_cache.py  repository_climb.py  repository_datasets.py  repository_maps.py  repository_models.py  repository_simple_climb.py  repository_simple_climb_pixel.py  repository_terrain.py  repository_tracklog_body.py  repository_tracklog_header.py  repository_train_logs.py  repository_trigger_point.py
script/: clean_all.py  create_all.py  create_all_stf.py  ingest_tracklogs.py  plot_conditions.py  plot_hist.py  plot_sim.py  test_torch_ppo.py  train_neural_policy.py
script/climb/: PLAN_DAY_CORRELATION_AND_DISTANCE.md  collect_climbs.py  collect_simple_climbs.py  ingest_simple_climbs.py  show_ceiling.py  show_climbs.py  show_day.py  show_inside.py  show_months.py  show_progress.py  show_seasons.py  show_seasons_simple.py  show_time_of_day.py  show_years.py
script/database/: migrate_to_duckdb.py  optimize_sqlite.py
script/flight/: plot_conditions.py  plot_hist.py  plot_sim.py
script/map/: build_model_map.py  build_slippy_tiles.py  eval_map_builder.py  ingest_simple_climb_pixels.py  show_flatland_map.py  show_simple_climb_pixels.py  train_map_builder.py
script/terrain/: example_usage.py  list_bands.py  load_terrain_demo.py
script/tracklog/: clean_all.py  collect_climbs.py  data_overview.py  ingest_tracklogs.py  plot_tracklog.py  show_tracklog.py
script/trigger_point/: build_model.py  insert_trigger_points.py  name_trigger_points.py  show_area.py  show_live_thermal.py  show_trigger_point.py  show_trigger_points.py  show_trigger_points_kk7.py
